--- a/.eslintrc
+++ b/.eslintrc
@@ -18,7 +18,7 @@
     "arrow-body-style": ["error", "always"],
     "no-shadow": ["error", { "allow": ["done", "res", "cb", "err", "resolve", "reject"] }],
     "no-use-before-define": ["error", { "functions": false }],
-    "max-len": 0,
+    "max-len": ["error", { "code": 100 }],
     "no-param-reassign": 0
   },
   "plugins": [
