--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
  language: node_js
  node_js:
    - "12"
-install: 
-  - yarn --ignore-engines
+ before_install:
+   - curl -o- -L https://yarnpkg.com/install.sh | bash
+   - export PATH="$HOME/.yarn/bin:$PATH"
